[r=blake-rouse][bug=1681379][author=ricgard] Resolves page-navigation overlap to actions dropdown when sticky header is active

--- a/src/maasserver/static/scss/_pages.scratch.scss
+++ b/src/maasserver/static/scss/_pages.scratch.scss
@@ -162,6 +162,7 @@
 
   .page-navigation {
     margin: 0;
+    z-index: 1 !important;
   }
 
   .tabs .tabs__tab .tabs__tab-link {
